# applied-mathematics

./: README.md  Start.md  TODO.md  Taskfile.yml  pyproject.toml
Notes/: Applied Functional Analysis.md  Life Insurance Models.md
notes/: Applied Functional Analysis.md  Economathematics.md  Inverse Problems.md  Life Insurance Models.md  Optimisation Theory.md  Partial Differential Equations.md  Perturbation Methods.md
projects/agent_based_modelling/assignment_1/: batch.py  forest_fire.py  hoshen_kopelman.py  main.html  main.ipynb  server.py  test_hoshen_kopelman.py
projects/agent_based_modelling/assignment_2/: game_of_life.py  main.ipynb  plots.py  test  three_glider_guns
projects/agent_based_modelling/assignment_3/: TODO.md  go.mod  main.go
projects/agent_based_modelling/assignment_4/: TODO.md  go.mod  main.go
projects/agent_based_modelling/assignment_4_cpp/: CMakeLists.txt  Car.cpp  Car.h  Model.cpp  Model.h  Params.h  Road.cpp  Road.h  main.cpp
projects/agent_based_modelling/assignment_5/: automaton.py  main.py  rule.py  test_rule.py
projects/agent_based_modelling/assignment_6/: graphs.py  main.py  model.py  runge_kutta.py
projects/agent_based_modelling/lenia/: animate.py  base.py  kernel.py  lenia.py  main.py  mapping.py  world.py
projects/agent_based_modelling/lib/: __init__.py  agent.py  batch.py  model.py  plot.py  space.py
projects/analysis_of_unstructured_data/assignment_1/: main.ipynb
projects/analysis_of_unstructured_data/assignment_3/: download_data.py  main.ipynb  real.csv  steve.csv
projects/analysis_of_unstructured_data/assignment_4/: main.ipynb  scraper.py
projects/analysis_of_unstructured_data/assignment_5/: main.py
projects/analysis_of_unstructured_data/assignment_7/: img2txt.py
projects/applied_functional_analysis/: Exercise sheet 2.md
projects/applied_functional_analysis/exercise_sheet_5/: Exercise sheet 5.md  exercise_1.py  exercise_2.py  exercise_3.py
projects/applied_functional_analysis/exercise_sheet_6/: Exercise Sheet 6.md  exercise_1.py  exercise_2.py
projects/diffusion_processes/exercise_sheet_1/: graph.csv  main.ipynb  main.py
projects/diffusion_processes/exercise_sheet_2/: Cargo.toml
projects/diffusion_processes/exercise_sheet_3/: Cargo.toml  main.html  main.ipynb  scraper.py
projects/diffusion_processes/exercise_sheet_4/: exercise_1.py  exercise_2.py  exercise_3.py  exercises_1_2.py  main.html  plots.py
projects/diffusion_processes/exercise_sheet_5/: exercise_1.py  exercise_2.py  main.ipynb
projects/diffusion_processes/exercise_sheet_6/: main.html  main.ipynb  main.py  network.py
projects/diffusion_processes/final_project/: ProfileModel.jl  ProfileThresholdModel.jl  State.jl  ThresholdModel.jl  diffusion_processes_project.pptx  main.jl
projects/inverse_problems/lab_01/: ex_01.py  ex_02.py
projects/inverse_problems/lab_02/: Exercise list 2.md  ex_01.py
projects/partial_differential_equations/: convergence_test.py  domain.py  linear_system.py  main.py  mesh.py  uvp.py
projects/thesis/: 1d_case.py  2d_case.py
semester_1/applied_functional_analysis/: Applied Functional Analysis.md
(+82 files in other folders)
