[tool.poetry]
name = "applied-mathematics"
version = "0.1.0"
description = ""
authors = ["mateusz.dzitkowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scipy = "^1.12.0"
jupyter = "^1.0.0"
nptyping = "^2.5.0"
wikipedia = "^1.4.0"
plotly = "^5.21.0"
meshio = "^5.3.5"
sympy = "^1.13.3"
mesa = "^2.4.0"
ruff = "^0.6.9"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F403", "F405"]
