[tool.poetry]
name = "applied-mathematics"
version = "0.1.0"
description = ""
authors = ["mateusz.dzitkowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scipy = "^1.12.0"
jupyter = "^1.0.0"
nptyping = "^2.5.0"
wikipedia = "^1.4.0"
plotly = "^5.21.0"
meshio = "^5.3.5"
sympy = "^1.13.3"
ruff = "^0.6.9"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
kagglehub = "^0.3.1"
youtube-data-api = "^0.0.21"
pydantic = "^2.9.2"
nltk = "^3.9.1"
geopy = "^2.4.1"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.13"
fire = "^0.7.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F403", "F405"]
